# GruVc

./: CMakeLists.txt  README.md  compile_commands.json  run
.cache/clangd/index/: Application.h.AFE0E5F46030CCB1.idx  ApplicationDef.c.A96169CC8E96B026.idx  glad.c.F6E52FDF063149A9.idx  glad.h.05A39842628BE671.idx  khrplatform.h.663F6D94F7AD7234.idx  main.c.66DD074A41016A7F.idx  stb_image.h.9FEE1B248709066A.idx
Core/: Application.h  ApplicationDef.c  Components.h  Context.h  Ecs.h  Entity.h  Renderer.h  Scene.c  Scene.h  SceneManager.c  SceneManager.h
Core/Archetypes/: Chunk.h  Component.h  Entity.h  Mesh.c  Mesh.h
Core/Archetypes/Components/: Base.h
Core/Archetypes/Entities/: UUID.h  UUId.c
Core/Helpers/: Hashtable.h  OOP.h
Core/Util/: Bitvec.h
Debug/: main.c
debug/: main.c
info/: mvp.md  styleguide.md
src/: application.c  application.h  events.h  layers.c  layers.h
src/util/: id.h  types.h
thght_prcs/: Layer_though_process.md
